// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders disabled buttons 1`] = `
.emotion-0 {
  margin: 1em;
  color: black;
}

<div>
  <button
    data-testid="decrement"
    disabled=""
  >
    -
  </button>
  <span
    class="emotion-0"
    data-testid="count"
  >
    0
  </span>
  <button
    data-testid="increment"
    disabled=""
  >
    +
  </button>
</div>
`;

exports[`renders enabled buttons by default 1`] = `
.emotion-0 {
  margin: 1em;
  color: black;
}

<div>
  <button
    data-testid="decrement"
  >
    -
  </button>
  <span
    class="emotion-0"
    data-testid="count"
  >
    0
  </span>
  <button
    data-testid="increment"
  >
    +
  </button>
</div>
`;
